[package]
name = "submarine"
version = "0.1.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

[dependencies]
# Core stuff
failure = {version="0.1.6", features=["std","backtrace"]}
log = {version = "0.4.8", features = ["std","serde"]}
flexi_logger = {version="0.14.7",features=["ziplogs"]}
itertools = "0.8.2"
rand = "0.7.2"
alloy = {git = "https://github.com/mrd0ll4r/alloy"}
#alloy = {path = "../alloy"}

# Serde
serde = {version="1.0.104",features=["derive"]}
serde_json = "1.0.46"
serde_yaml = "0.8.11"

# API/Tokio/TCP stuff
tokio = { version = "0.2.11", features = ["full"] }
tokio-util = {version="0.2.0", features=["codec"]}
futures = "0.3.3"
tide = "0.6"
http = "0.2.0"
bytes = "0.5.4"

# Hardware stuff
embedded-hal = "0.2.3"
linux-embedded-hal = "0.3.0"
rppal = "0.11.3"
pwm-pca9685 = "0.2.0"
mcp23017 = {git ="https://github.com/mrd0ll4r/mcp23017"}
libc = "0.2.66"

# Prometheus stuff
prometheus_exporter = "0.4.1"
prometheus = {version="0.7.0",features=["process"]}
lazy_static = "1.4.0"
systemstat = "0.1.5"
