[package]
name = "submarine"
version = "0.2.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

[dependencies]
# Core
failure = {version="0.1", features=["std","backtrace"]}
log = {version = "0.4", features = ["std","serde"]}
flexi_logger = {version="0.16",features=["compress"]}
itertools = "0.9"
rand = "0.8"
#alloy = {git = "https://github.com/mrd0ll4r/alloy"}
alloy = {path = "../alloy"}

# Serde
serde = {version="1",features=["derive"]}
serde_json = "1"
serde_yaml = "0.8"

# API/Tokio/TCP
tokio = { version = "1", features = ["full"] }
tokio-util = {version="0.6", features=["codec"]}
futures = "0.3"
chrono = "0.4"

# Hardware
embedded-hal = "0.2"
linux-embedded-hal = "0.3"
rppal = "0.12"
pwm-pca9685 = "0.3"
mcp23017 = {git ="https://github.com/mrd0ll4r/mcp23017"}
libc = "0.2"
bme280 = "0.2.1"

# Prometheus, metrics
prometheus_exporter = "0.7.2"
prometheus = {version="0.10.0",features=["process"]}
lazy_static = "1"
systemstat = "0.1.10"
