[package]
name = "submarine"
version = "0.2.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"

[dependencies]
# Core
anyhow = {version="1.0.75", features = ["backtrace"]}
log = { version = "0.4", features = ["std", "serde"] }
flexi_logger = { version = "0.25.6" }
itertools = "0.11.0"
rand = "0.8"
#alloy = {git = "https://github.com/mrd0ll4r/alloy"}
alloy = { path = "../alloy" }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# API/Tokio/TCP
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
chrono = "0.4"

# HTTP API
warp = "0.3.6"

# Hardware
embedded-hal = "0.2"
linux-embedded-hal = "0.3"
rppal = "0.14.1"
pwm-pca9685 = "0.3"
mcp23017 = "1.0.0"
libc = "0.2"
bme280 = "0.2.1"

# Prometheus, metrics
prometheus_exporter = "0.8.5"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1"
systemstat = "0.2"
